style/style.css
body {
	background-color: #fff;
}

body::before {
	content: '';
	position: fixed;
	top: 0;
	left: 0;
	width: 100%;
	height: 100%;
	background-image: url("../import/susan.png");
	background-size: 400px;
	z-index: -1;
	transition: filter 0.3s ease;
}

body.night::before {
	filter: invert(1);
}

#conteneur {
	width: 1050px;
	margin: auto;
	margin-top: 145px;
	background-color: rgb(240, 240, 240);
	padding: 150px;
	padding-top: 50px;
}

h1 {
	color: black;
	font-size: 3em;
	text-transform: uppercase;
	padding: 1em;
	text-align: center;
	padding-top: 0px;
	font-family: Arial, Helvetica, sans-serif;
}

h2 {
	font-size: 2em;
	color: black;
	width: 800px;
	margin: auto;
	padding-top: 40px;
	font-family: Arial, Helvetica, sans-serif;
}

p {
	font-family: courier;
	color: black;
	width: 800px;
	margin: auto;
	text-align: justify;
}

a {
	color: rgb(39, 65, 106);
}

img {
	padding-top: 3em;
	padding-bottom: 3em;
}

.portrait-section {
	width: 800px;
	margin: auto;
}

.portrait {
	display: block;
	width: 800px;
	filter: grayscale(100%);
	transition: filter 0.3s ease;
}

.portrait:hover {
	filter: grayscale(0%);
}

.portrait-caption {
	color: black;
	font-family: courier;
}

.image-wide {
	display: block;
	margin: auto;
	cursor: zoom-in;
	width: 800px;
}

.caption-wide {
	width: 800px;
	margin: auto;
}

.stamp {
	display: block;
	margin: auto;
	cursor: pointer;
	height: 250px;
	width: auto;
}

.caption-stamp {
	width: 370px;
	margin: auto;
	text-align: justify;
}

#night-toggle {
	position: fixed;
	top: 20px;
	right: 20px;
	z-index: 999;
	cursor: pointer;
}

#night-toggle input {
	display: none;
}

#night-toggle span {
	display: block;
	width: 60px;
	height: 30px;
	background: #aaa;
	border-radius: 30px;
	position: relative;
	transition: background 0.3s ease;
}

#night-toggle span::after {
	content: '';
	position: absolute;
	width: 24px;
	height: 24px;
	background: white;
	border-radius: 50%;
	top: 3px;
	right: 3px;
	transition: right 0.3s ease;
}

#night-toggle input:checked + span {
	background: #444;
}

#night-toggle input:checked + span::after {
	right: calc(100% - 27px);
}

body.night {
	background-color: #111;
}

body.night #conteneur {
	background-color: #1e1e1e;
}

body.night h1,
body.night h2,
body.night p,
body.night .portrait-caption {
	color: #e0e0e0;
}

body.night a {
	color: #7aaddf;
}

